Realizar documentacion del microservicio
Se realizó la documentacion del microservicio usando openapi, a su vez, se trabajo en que el microservicio pase la revision de sonar. No fue chequeado que cumpla con los principios solid.